@@ -17,6 +17,7 @@ package org.apache.solr.rest.schema.analysis;
  */
 
 import java.io.File;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
@@ -189,17 +190,31 @@ public class TestManagedSynonymFilterFactory extends RestTestBase {
     // test for SOLR-6015
     syns = new HashMap<>();
     syns.put("mb", Arrays.asList("megabyte"));    
-    assertJPut(endpoint, 
-               JSONUtil.toJSON(syns),
-               "/responseHeader/status==0");
+    assertJPut(endpoint,
+        JSONUtil.toJSON(syns),
+        "/responseHeader/status==0");
 
     syns.put("MB", Arrays.asList("MiB", "Megabyte"));    
-    assertJPut(endpoint, 
-               JSONUtil.toJSON(syns),
-               "/responseHeader/status==0");
+    assertJPut(endpoint,
+        JSONUtil.toJSON(syns),
+        "/responseHeader/status==0");
     
-    assertJQ(endpoint+"/MB", 
-        "/MB==['Megabyte','MiB','megabyte']");    
+    assertJQ(endpoint + "/MB",
+        "/MB==['Megabyte','MiB','megabyte']");
+
+    // test for SOLR-6878 - by default, expand is true, but only applies when sending in a list
+    List<String> m2mSyns = new ArrayList<>();
+    m2mSyns.addAll(Arrays.asList("funny", "entertaining", "whimiscal", "jocular"));
+    assertJPut(endpoint, JSONUtil.toJSON(m2mSyns), "/responseHeader/status==0");
+
+    assertJQ(endpoint + "/funny",
+        "/funny==['entertaining','jocular','whimiscal']");
+    assertJQ(endpoint + "/entertaining",
+        "/entertaining==['funny','jocular','whimiscal']");
+    assertJQ(endpoint + "/jocular",
+        "/jocular==['entertaining','funny','whimiscal']");
+    assertJQ(endpoint + "/whimiscal",
+        "/whimiscal==['entertaining','funny','jocular']");
   }
 
   /**
